--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Safety Omnibus</string>
+    <string name="cred">*Before incident is visible it will be reviewed for credibility</string>
 </resources>
